# gpi_pack

./: .gitignore  pyproject.toml  readme.md  requirements.txt
src/gpi_pack/: TNutil.py  TarNet.py  __init__.py  _tuning.py  diffusion.py  dyn_gpi.py  video.py
test/: test_dyn_gpi.py  test_inference.py  test_tuning.py  test_video.py
