[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gpi_pack"
version = "0.1.4"
description = "The package of GenAI-Powered Inference"
readme = "readme.md"
authors = [
    {name = "Kentaro Nakamura", email = "knakamura@g.harvard.edu"},
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.22.0",
    "scipy>=1.8.0",
    "matplotlib>=3.5.0",
    "torch>=2.0.0",
    "scikit-learn>=1.0.0",
    "pandas>=1.4.0",
    "transformers>=4.20.0",
    "tqdm>=4.60.0",
    "accelerate>=0.15.0",
    "patsy>=0.5.2",
    "diffusers>=0.34.0",
    "pillow>=11.2.0",
    "torchvision>=0.20.0",
]

[project.optional-dependencies]
tune = [
    "optuna>=3.0.0",
]
video = [
    "av>=10.0.0",
    "imageio[ffmpeg]>=2.31.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "isort>=5.0.0",
]

[project.scripts]
gpi-extract-video = "gpi_pack.video:main"

[project.urls]
"Homepage" = "https://gpi-pack.github.io/"
"Bug Tracker" = "https://github.com/gpi-pack/gpi_pack/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "--cov=gpi_pack"

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
